minor style fix: increased width of dropdown menu (it was too small on smaller screen sizes)

--- a/src/components/Header/style.scss
+++ b/src/components/Header/style.scss
@@ -28,7 +28,7 @@
  }
 
  .header-items {
-  width: 40%;
+  width: 60%;
   position: absolute;
   background: black;
   padding: 0px 0px 12px 12px;
